<resources>
    <string name="app_name">Bookie</string>
    <string name="hint_email">E-mail cím</string>
    <string name="hint_password">Jelszó</string>
    <string name="login_title">Bookie Belépés</string>
    <string name="login_btn">Belépés</string>
    <string name="invalid_form">Az adatok nem helyesen lettek megadva</string>
    <string name="registration_btn">Regisztráció</string>
    <string name="auth_failed">Nem sikerült a beléptetés</string>
    <string name="auth_reg_success">Sikeres regisztráció</string>
    <string name="auth_reg_failed">Nem sikerült a regisztráció</string>
    <string name="auth_success">Sikeres belépés</string>
    <string name="sign_out">Kilépés</string>
    <string name="google_fail_connect">Google Nem Kommunikál</string>
    <string name="scan">Vonalkód beolvasása</string>
    <string name="add_book">Új könyv</string>
    <string name="book_title">Cím</string>
    <string name="book_author">Író</string>
    <string name="book_likes">Értékelés</string>
    <string name="book_description">Leírás</string>
    <string name="add_book_btn">Új könyv hozzáadása</string>
    <string name="back_btn">Vissza</string>
    <string name="not_result">Sajnos nincs találat. Próbálja meg egy másik könyvvel.</string>
    <string name="wait_data">Adatok betöltése...</string>

    <string name="order_fragment_title">Rendezés</string>
    <string name="book_list_activity_title">My Books</string>

    <string name="order_by_name">Név szerint</string>
    <string name="order_by_fav">Kedvencek szerint</string>
    <string name="order_by_author">Író szerint</string>
    <string name="order_by_save_time">Feltöltés dátuma szerint</string>
    <string name="book_details_title">Cím:</string>
    <string name="book_details_author">Szerző:</string>
    <string name="book_details_category">Kategória:</string>
    <string name="book_details_isbn">ISBN:</string>
    <string name="book_details_publisher">Kiadó:</string>
    <string name="book_details_year">Kiadás éve:</string>
    <string name="book_details_page">Oldalszám:</string>
    <string name="book_details_lang">Nyelv:</string>
    <string name="book_details_weight">Súly:</string>

    <string name="bottom_navigation_button_add_book">Hozzáadás</string>
    <string name="bottom_navigation_button_camera">ISBN Beolvasás</string>
    <string name="bottom_navigation_button_signout">Kijelentkezés</string>
    <string name="book_details_added_favorites">Hozzáadva a kedvencekhez</string>

    <string name="options_fragment_sign_out">Kilépés</string>
    <string name="not_internet">Nincs internet elérés</string>
</resources>
