<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="200dp"
    android:orientation="vertical"
    tools:context="com.visualstudio.verboben14.bookie.OrderFragment"
    android:background="@color/colorBackground">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:text="@string/order_fragment_title"
        android:textSize="25dp"
        android:textAlignment="center"
        />
    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/order_by_fav"
            android:textSize="19sp"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/order_by_name"
            android:textSize="19sp"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/order_by_author"
            android:textSize="19sp"/>
        <android.support.v7.widget.AppCompatRadioButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/order_by_save_time"
            android:textSize="19sp"/>
    </RadioGroup>
</LinearLayout>
