<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:orientation="vertical"
    android:background="@color/colorBackground">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:text="@string/login_title"
        android:textAlignment="center"
        android:textSize="46sp"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/field_email"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/hint_password"
        android:id="@+id/field_password"
        android:inputType="textPassword"/>

    <Button
        android:id="@+id/simpleLoginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_btn"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"/>
    <Button
        android:id="@+id/registrationBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_btn"
        android:background="@color/colorPrimary"
        android:textColor="#FFF"
        />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/googleSignInBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    </com.google.android.gms.common.SignInButton>

</LinearLayout>
