<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.visualstudio.verboben14.bookie.MainActivity">


    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:textAlignment="center"
            android:text="@string/app_name"/>

        <TextView
            android:id="@+id/networkStatus"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textAlignment="center"
            android:layout_marginBottom="@dimen/activity_horizontal_margin"
            android:textColor="#760505"
            android:visibility="gone"
            android:text="@string/not_internet"/>
    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/book_list_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/scanBtn"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:clipToPadding="false"
        android:padding="16dp"
        android:layout_below="@+id/logoContainer"/>


    <android.support.v7.widget.AppCompatButton
        android:id="@+id/scanBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan"
        android:layout_above="@+id/singOutBtn"
        android:layout_alignParentStart="true"
        />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/singOutBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_out"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        />

</RelativeLayout>
