<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical"
    tools:context="com.visualstudio.verboben14.bookie.AddBookActivity"

    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <RelativeLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:id="@+id/add_header_layout">

        <ImageView
            android:id="@+id/book_cover"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            />

        <TextView
            android:id="@+id/add_book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_book"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="25sp"
            android:layout_toEndOf="@id/book_cover"
            android:layout_toRightOf="@id/book_cover"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            />

        <TextView
            android:id="@+id/isbn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="9789634033523"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:layout_below="@id/add_book_title"
            android:layout_toEndOf="@id/book_cover"
            android:layout_toRightOf="@id/book_cover"
            android:textSize="15sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"/>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/add_content_layout"
        android:layout_below="@id/add_header_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_title"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:id="@+id/title_attribute_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_title"
                android:textSize="17sp"
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:ellipsize="none"
                android:scrollHorizontally="false"
                />

            <TextView
                android:id="@+id/bookTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="none"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="A könyv nagyon szép címe"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_authors"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_author"
                android:textSize="17sp"
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:ellipsize="none"
                android:scrollHorizontally="false"
                />

            <TextView
                android:id="@+id/bookAuthors"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="none"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="Morgan Rhodes"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>
        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_likes"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_likes"
                android:textSize="17sp"
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:ellipsize="none"
                android:scrollHorizontally="false"
                />

            <TextView
                android:id="@+id/bookLikes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:ellipsize="none"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="4.5"
                android:textSize="17sp"
                android:layout_marginLeft="20dp"/>

        </LinearLayout>
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/add_description"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/book_description"
                android:textSize="17sp"
                android:layout_gravity="center_vertical"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"

                android:ellipsize="none"
                android:scrollHorizontally="false"
                />

            <ScrollView
                android:layout_width="wrap_content"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/bookDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sławomir ​Mrożek, a méltán világhírű, és immár a klasszikusok közé sorolható lengyel író elbeszéléseinek második kötetét ajánljuk olvasóink figyelmébe, amely az 1960-1970 között született írásokat tartalmazza.\r\n\r\nA groteszk, az abszurd sajátos eszközeivel torzító tükröt tart elénk a szerző - egy-egy szituáció, komoly gondolat fejtetőre állításával, végletekig feszítésével megmutatja a dolgok fonákját, a világ bonyolult szövedékét. Jóllehet e hosszabb-rövidebb történetek a szocializmus idején íródtak, mit sem veszítettek aktualitásukból: a jellemtelenség, a korrupció, a szervilizmus, a harácsolás, a közöny, az ostobaság, a hazudozás, az embertelenség politikai rendszertől, társadalmi berendezkedéstől függetlenül undorító jelenségek - s szomorúan kell megállapítanunk, hogy a helyzet nemigen javul. Friss és üde voltam, mintha jól kialudtam volna magamat. Az élvezet, amit az alkoholmámornak és önnön becstelenségemnek köszönhettem, s amiért a vezeklés terhét kellett volna viselnem, elevenen és csábítóan élt emlékezetemben, s nem sújtott semmiféle büntetés. Az árva miatt sem éreztem semmiféle lelkifurdalást. Meg kell vallanom, hogy nem szívesen becstelenítettem meg, ugyanis ismerem magamat, és tudom, hogy soha nem menekülhetek mardosó bűntudatom elől. Most azonban nemcsak hogy nem éreztem belső nyugtalanságot, sem undort vagy kellemetlen szájízt, hanem épp ellenkezőleg: alighogy kinyitottam a szemem, máris vidáman, tettre készen néztem körül; hol egy újabb árva, akit megbecsteleníthetnék?"
                    android:textSize="17sp"
                    android:scrollbars = "vertical"
                    />
            </ScrollView>
        </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.25"
        >

        <Button
            android:id="@+id/add_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/add_book_btn"
            android:background="@color/colorPrimary"
            android:textColor="#FFF"/>

        <Button
            android:id="@+id/back_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:text="@string/back_btn"
            android:textColor="#FFF"
            />
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/Loading"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center_horizontal"
        android:indeterminate="true"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"

        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:indeterminate="true"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/wait_data"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
            />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/fail_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="vertical"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        >

        <TextView
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/not_result"/>
        <Button
            android:id="@+id/fail_back_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:text="@string/back_btn"
            />
    </LinearLayout>

</LinearLayout>

